# nba_model

./: .gitignore  README.md  corr_wire.py  diagnose_levers.py  gate.sh  hier_fano_wire.py  patch_beta_flag.py  patch_bss_stl_blk.py  patch_conv_beta_guard.py  patch_link_risk_metrics.py  patch_mtm_and_metrics.py  patch_overlay.py  patch_overlay_width.py  patch_price_band.py  patch_qual_fix.py  patch_qual_projection.py  patch_rates_robust.py  patch_rates_winsor.py  patch_rf_and_annvol.py  patch_ship_stl_twopart.py  patch_stl_blk.py  patch_twopart_branch.py  patch_twopart_data.py  patch_unseal_stat.py  purge_deadcode.py  pyproject.toml  requirements.txt  run_ab_2024.sh  v2_wire.py
docs/: DECISIONS.md  FEATURE_GLOSSARY.md  MECHANICS.md  RESULTS.md  STATUS.md  STRUCTURE.md
scripts/backtest/: registry.py  registry.py.bak.stlblk_wire  registry.py.statbak
scripts/backtest/engine/: arm_correlation.py  backtest_orchestrator.py  backtest_orchestrator.py.bakr  backtest_orchestrator_daily.py  backtest_orchestrator_daily.py.bak_conforch  backtest_orchestrator_daily.py.bakr  backtest_orchestrator_daily.py.faultcbak  backtest_portfolio.py  backtest_pricejoin.py  backtest_pricejoin_daily.py  backtest_samples.py  backtest_singlepass.py
scripts/backtest/settle/: soft_outcome.py  trade_ledger.py
scripts/common/: config.py  config.py.bak.stlblk_unseal  db.py  injury_categories.py  risk_metrics.py  samples_cache.py
scripts/diagnostics/: three_gate_diag.py
scripts/features/: feature_loader.py  feature_regularise.py  nba_candidate_filter.py  positional_z.py
(+119 files in other folders)
